# tiny_skill_agent

./: LICENSE.md  README.md  how_to_use.md  pyproject.toml  requirements.txt  tiny_skill_agent.py
skills/compare-two-images/: SKILL.md
skills/design-to-playbook-skill/: SKILL.md
skills/design-to-playbook-skill/assets/: generated-skill-template.md
skills/markdown-to-playbook-skill/: SKILL.md
skills/markdown-to-playbook-skill/references/: playbook-outline.md
skills/office-to-markdown/: SKILL.md
skills/office-to-markdown/assets/: docx-template.md  excel-template.md  markdown-template.md  pptx-template.md
skills/office-to-markdown/scripts/: office_to_markdown.py
skills/pdf-to-markdown/: SKILL.md
skills/pdf-to-markdown/assets/: pdf-template.md
skills/pdf-to-markdown/scripts/: pdf_to_markdown.py
skills/repo-map/: SKILL.md
skills/repo-map/references/: output-format.md
skills/repo-map/scripts/: repo_map.py
skills/skills-bundler/: SKILL.md
skills/skills-bundler/scripts/: skills_bundler.py
src/tiny_skill_agent/: __init__.py  __main__.py  action.py  agent.py  cli.py  image_inputs.py  prompt.py  skill_files.py  skills.py  telemetry.py  utils.py  workspace.py
tests/: conftest.py  test_agent.py  test_cli.py  test_helpers.py  test_markdown_to_playbook_skill.py  test_office_to_markdown_skill.py  test_pdf_to_markdown_skill.py  test_skills_bundler_skill.py  test_validation.py
tests/data/skills/bad-name-format/: SKILL.md
tests/data/skills/colon-skill/: SKILL.md
tests/data/skills/duplicate-one/: SKILL.md
tests/data/skills/duplicate-two/: SKILL.md
(+5 files in other folders)
