[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-skill-agent"
version = "0.1.0"
description = "Tiny Agent Skills runner for OpenAI-compatible API (completions)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.68.0",
  "opentelemetry-api>=1.32.0",
  "opentelemetry-exporter-otlp>=1.32.0",
  "opentelemetry-sdk>=1.32.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
tiny-skill-agent = "tiny_skill_agent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.uv]
package = true
